BEPRO 2036 (#296)
* add table relations

* add curator relation to user migration

* update migration to update the userId value for each curator based on the user with the same address

* add notifications and user-settings table

* fix models and migrations to have the correct relations

* fix models relation keys -.-

* introduce notification api

* add loggers, export handlers and add more "is admin" logic

* missing a && address

* function testing for get-notifications.ts exists

* refactor simple-mocks to another file

* tests for delete-notification.ts

* tests for putReadNotification

* fix imports

* remove webpack: true to remove warning

* remove comment and add a more truthful comment

* remove the pr template

* no need to use ...simpleMock

* eslint

* introduce mark-all-read.test.ts

* add lower to migration

* adds documentation to openapi.yaml

* add user-settings api and tests

* add more openapi documentation

* The semicolon at the end of a schema reference in the OpenAPI documentation was causing invalid syntax. It was removed to solve this problem and make the YAML valid.

* fix associate errors

* make it so we dont allow GET on notifications

* no gets for the whole route

* Improve querying and add timestamps to models

* Refactor notifications schema and model

---------
