# public/openapi.yaml
@@ -399,6 +399,30 @@ components:
               - $ref: '#/components/schemas/LeaderboardEntry'
               - $ref: '#/components/schemas/Network'
 
+    Notification:
+      type: object
+      properties:
+        id:
+          type: number
+        uuid:
+          type: string
+        userId:
+          type: number
+        type:
+          type: string
+        read:
+          type: boolean
+        hide:
+          type: boolean
+
+    UserSettings:
+      type: object
+      properties:
+        notifications:
+          type: boolean
+        language:
+          type: string
+
 paths:
   /health:
     description: API Health
@@ -701,6 +725,74 @@ paths:
                 properties:
                   url:
                     $ref: '#/components/schemas/StringUrl'
+
+  /notification/[id]/:
+    delete:
+      description: "Delete notification"
+      parameters:
+        - in: path
+          name: id
+          schema:
+            $ref: '#/components/schemas/String'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Notification'
+
+  /notification/[id]/mark-read:
+    put:
+      description: "mark notification as read"
+      parameters:
+        - in: path
+          name: id
+          schema:
+            $ref: '#/components/schemas/String'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Notification'
+
+  /notifications/[address]/:
+    get:
+      description: "get all notifications for address"
+      parameters:
+        - in: path
+          name: address
+          schema:
+            $ref: '#/components/schemas/String'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Notification'
+
+  /notifications/[address]/read:
+    put:
+      description: "mark all unread notifications of address to read"
+      parameters:
+        - in: path
+          name: address
+          schema:
+            $ref: '#/components/schemas/String'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Notification'
   /payments/:
     get:
       description: get User payment summary
@@ -1445,3 +1537,27 @@ paths:
             application/json:
               schema:
                 type: string
+  /user/settings/:
+    get:
+      description: "Get settings for connected user"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserSettings'
+    post:
+      description: "Change settings for connected user"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserSettings'
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserSettings'
